cmake_minimum_required(VERSION 3.25)
project(Serializer LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


set(LIBSERIALIZER_INCLUDE_DIRECTORIES
    "${CMAKE_CURRENT_SOURCE_DIR}/include/"
    PARENT_SCOPE
)

add_library(${PROJECT_NAME} INTERFACE)
target_include_directories(${PROJECT_NAME} INTERFACE ${LIBSERIALIZER_INCLUDE_DIRECTORIES})
